Add to open request toolbar with back button

--- a/app/src/main/res/layout/lost_fragment.xml
+++ b/app/src/main/res/layout/lost_fragment.xml
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    android:id="@+id/lostscrollView"
+<RelativeLayout
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:scrollY="110dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintVertical_bias="0.0">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:id="@+id/lostmainTape"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedscrollview"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
-        <View
+        <LinearLayout
+            android:id="@+id/mainTape"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:id="@+id/tmpView"/>
+            android:layout_height="wrap_content">
+        </LinearLayout>
 
-    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
-</ScrollView>
+</RelativeLayout>
