--- a/app/src/main/res/layout/open_request.xml
+++ b/app/src/main/res/layout/open_request.xml
@@ -8,40 +8,10 @@
     android:layout_height="match_parent"
     android:focusableInTouchMode="true">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/CustomActionBarStyle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-        <ImageButton
-            android:id="@+id/backButton"
-            android:layout_width="25dp"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:contentDescription="@string/backToMain"
-            app:srcCompat="?attr/homeAsUpIndicator"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="18dp" />
-
-        <TextView
-            android:id="@+id/item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Found Item"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"/>
-
-
-    </android.support.v7.widget.Toolbar>
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar">
+    </include>
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -53,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
