--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/sort_button"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
-        android:title="@string/sort_button"
-        app:showAsAction="ifRoom"/>
-
-    <item
         android:id="@+id/app_bar_search"
         android:icon="@drawable/image3"
         android:title="@string/search"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
+
+    <item
+        android:id="@+id/sort_button"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:title="@string/sort_button"
+        app:showAsAction="always"/>
 
 </menu>
