--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar">
+
         </include>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:tabIndicatorColor="@color/tabindicatorcolor"
             app:tabIndicatorHeight="2dp"
-            app:tabTextColor="@color/white"/>
+            app:tabTextColor="@color/white" />
 
 
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        android:layout_height="match_parent"
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:src="@android:drawable/ic_input_add"
-        android:background="@color/colorPrimary"
         android:layout_margin="16dp"
-        app:layout_behavior="com.example.polyfinderv2.ScrollButtonBehavior"/>
+        android:background="@color/colorPrimary"
+        android:src="@android:drawable/ic_input_add"
+        app:layout_behavior="com.example.polyfinderv2.ScrollButtonBehavior" />
 
 
 </android.support.design.widget.CoordinatorLayout>
