--- a/app/src/main/res/layout/request_rectangle.xml
+++ b/app/src/main/res/layout/request_rectangle.xml
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Misha Usov"
+        android:text="Document"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
