--- a/app/src/main/res/layout/request_rectangle.xml
+++ b/app/src/main/res/layout/request_rectangle.xml
@@ -12,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:visibility="invisible"
+        android:visibility="visible"
+        android:textSize="16dp"
+        android:hint="category"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
