Add divider between elements in found and lost main tapes (Comment placeholders)

--- a/app/src/main/res/layout/found_fragment.xml
+++ b/app/src/main/res/layout/found_fragment.xml
@@ -12,9 +12,11 @@
 
         <LinearLayout
             android:id="@+id/mainTape"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:divider="@drawable/lin_divider"
+            android:showDividers="middle">
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
