--- a/app/src/main/res/layout/request_rectangle.xml
+++ b/app/src/main/res/layout/request_rectangle.xml
@@ -6,9 +6,8 @@
     android:id="@+id/constraintlayout"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:layout_margin="15dp"
-    android:background="@color/requestcolor"
-    android:elevation="5dp">
+    android:layout_margin="10dp"
+    android:background="@drawable/request_rectangle_bg">
 
     <ImageView
         android:id="@+id/request_img"
@@ -65,17 +64,6 @@
         app:layout_constraintTop_toBottomOf="@+id/category"
         app:layout_constraintVertical_bias="0.4" />
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="@color/divideColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/request_img"
-        app:layout_constraintVertical_bias="1.0" />
-
     <TextView
         android:id="@+id/category"
         android:layout_width="wrap_content"
@@ -84,12 +72,12 @@
         android:layout_marginBottom="8dp"
         android:text="Document type"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/request_img"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.134" />
+        app:layout_constraintVertical_bias="0.125" />
 
     <TextView
         android:id="@+id/dataview"
