--- a/app/src/main/res/layout-v26/profile_activity.xml
+++ b/app/src/main/res/layout-v26/profile_activity.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ProfileActivity">
 
     <include
@@ -13,227 +14,125 @@
 
     </include>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scrollbarSize="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.0">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/const2"
+        <ImageView
+            android:id="@+id/photoImage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="200dp"
+            android:contentDescription="@string/setimagefromphone"
+            app:srcCompat="@drawable/polylogo">
 
-            <EditText
-                android:id="@+id/email_field"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="70dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="32dp"
-                android:background="@null"
-                android:ems="10"
-                android:hint="somebody@gmail.com"
-                android:selectAllOnFocus="false"
-                android:singleLine="false"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/photoImage" />
+        </ImageView>
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/email"
-                app:layout_constraintEnd_toStartOf="@+id/email_field"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/email_field"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@android:drawable/ic_dialog_email" />
+        <ImageButton
+            android:id="@+id/photoImageButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignBottom="@id/photoImage"
+            android:background="@drawable/rounded_sign_in_button"/>
 
-            <ImageButton
-                android:id="@+id/photoImageButton"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rounded_sign_in_button"
-                android:src="@android:drawable/ic_menu_camera"
-                app:layout_constraintBottom_toTopOf="@+id/email_field"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.977"
-                app:layout_constraintStart_toStartOf="@+id/photoImage"
-                app:layout_constraintTop_toTopOf="@+id/photoImage"
-                app:layout_constraintVertical_bias="0.921"
-                tools:srcCompat="@android:drawable/ic_menu_camera" />
+    </RelativeLayout>
 
-            <EditText
-                android:id="@+id/name_surname_field"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="70dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="30dp"
-                android:background="@null"
-                android:ems="10"
-                android:hint="John Smith"
-                android:inputType="textPersonName"
-                android:selectAllOnFocus="false"
-                android:singleLine="false"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/email" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/white">
 
-            <TextView
-                android:id="@+id/email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/email"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/email_field"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/email_field"
-                app:layout_constraintTop_toBottomOf="@+id/email_field" />
+        <EditText
+            android:id="@+id/email_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:hint="somebody@gmail.com"
+            android:selectAllOnFocus="false"
+            android:layout_toEndOf="@id/imageView3"
+            android:layout_marginEnd="20dp"
+            android:singleLine="false"
+            android:textSize="24sp"/>
 
-            <TextView
-                android:id="@+id/password_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Change password"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/password_field"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/password_field"
-                app:layout_constraintTop_toBottomOf="@+id/password_field" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:srcCompat="@android:drawable/ic_dialog_email" />
 
-            <TextView
-                android:id="@+id/name_suraname_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/name_surname"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/name_surname_field"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/name_surname_field"
-                app:layout_constraintTop_toBottomOf="@+id/name_surname_field" />
+    </RelativeLayout>
 
-            <EditText
-                android:id="@+id/password_field"
-                android:layout_width="331dp"
-                android:layout_height="42dp"
-                android:layout_marginStart="70dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="30dp"
-                android:background="@null"
-                android:ems="10"
-                android:hint="@string/your_current_password"
-                android:inputType="textPassword"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/telephone_text" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/telephone_field"
-                android:layout_width="0dp"
-                android:layout_height="42dp"
-                android:layout_marginStart="70dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="30dp"
-                android:background="@null"
-                android:ems="10"
-                android:hint="@string/telephone_field"
-                android:inputType="phone"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name_suraname_text" />
+        <ImageView
+            android:id="@+id/image_edit_surname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
-            <TextView
-                android:id="@+id/telephone_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/telephone"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="@+id/telephone_field"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/telephone_field"
-                app:layout_constraintTop_toBottomOf="@+id/telephone_field" />
 
-            <ImageView
-                android:id="@+id/image_edit_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/password_text"
-                app:layout_constraintEnd_toStartOf="@+id/password_field"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/password_field"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@android:drawable/ic_lock_lock" />
+        <EditText
+            android:id="@+id/name_surname_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="John Smith"
+            android:inputType="textPersonName"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/image_edit_surname"
+            android:layout_marginEnd="20dp"
+            android:selectAllOnFocus="false"
+            android:singleLine="false"
+            android:textSize="24sp">
 
-            <ImageView
-                android:id="@+id/image_edit_surname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/name_suraname_text"
-                app:layout_constraintEnd_toStartOf="@+id/name_surname_field"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/name_surname_field"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@android:drawable/ic_menu_my_calendar" />
+        </EditText>
 
-            <ImageView
-                android:id="@+id/image_edit_telephone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/telephone_text"
-                app:layout_constraintEnd_toStartOf="@+id/telephone_field"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/telephone_field"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@android:drawable/ic_menu_call" />
+    </RelativeLayout>
 
-            <ImageView
-                android:id="@+id/photoImage"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:contentDescription="@string/setimagefromphone"
-                android:src="@android:drawable/ic_menu_camera"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/polylogo">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="wrap_content">
 
-            </ImageView>
+        <EditText
+            android:id="@+id/telephone_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:ems="10"
+            android:hint="@string/telephone_field"
+            android:inputType="phone"
+            android:layout_toEndOf="@id/image_edit_telephone"
+            android:layout_marginEnd="20dp"
+            android:textSize="24sp">
 
-            <Button
-                android:id="@+id/save_info_button"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/rounded_button"
-                android:text="@string/save_info_button"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password_text"
-                app:layout_constraintVertical_bias="1.0" />
+        </EditText>
 
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
+        <ImageView
+            android:id="@+id/image_edit_telephone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            app:srcCompat="@android:drawable/ic_menu_call" />
 
-</android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/save_info_button"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_button"
+        android:text="@string/save_info_button"
+        android:layout_gravity="center"
+        android:textColor="@color/white" />
+
+</LinearLayout>
