--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,13 +21,12 @@
     <color name="borderColor">#B4B4B4</color>
     <color name="upBgColor">#80E5E5E5</color>
     <color name="divideColor">#ECECEC</color>
-    <color name="tabindicatorcolor">#B4B2B2</color>
+    <color name="tabindicatorcolor">#158AFF</color>
     <color name="app_name_log_in">#EBF3B517</color>
     <color name="ddd">#B2FF59</color>
     <color name="bgRounded">#6870f7</color>
     <color name="descriptionColor">#222222</color>
     <color name="titleColor">#222222</color>
-
     <color name="tabactive">#A3E2A1</color>
     <color name="foundColorTab">#A3E2A1</color>
     <color name="lostColorTab">#F0A2AA</color>
